<resources>
    <string name="app_name">Quiz</string>
    <!--    Fragments name-->
    <string name="home">Home</string>
    <string name="spin">Spin</string>
    <string name="profile"> Profile</string>
    <string name="history">History</string>

    <!--    Splash Activity-->
    <string name="welcome">"Welcome"</string>
    <string name="nice">Nice to meet you! Let\'s make \n your knowledge  great</string>
    <string name="name"> Developed By \n Muhammad Adil Ashraf</string>

    <!--    Sign Up-->
    <string name="sign_up"> Sign Up</string>
    <string name="name_hint">Enter Name</string>
    <string name="age_hint">Enter Age</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="signin_txt">Sign In</string>
    <string name="have_account">Already Have Account? </string>


    <!--    Sign In-->
    <string name="sign_in"> Sign In</string>
    <string name="dont_have_account">Don\'t Have Account? </string>


    <!--    Nav layout -->
    <string name="your_name"> Your Name</string>
    <string name="zero">0 </string>

    <!--Category-->
    <string name="category">Category </string>

    <!--    Profile-->
    <string name="person_info">Person Information </string>
    <string name="username">Name </string>
    <string name="email">Email </string>
    <string name="age">Age </string>
    <string name="country">Country </string>
    <string name="sign_out">Sign Out </string>

    <!--    Windrawal-->
    <string name="withdrawal">Withdrawal Money </string>
    <string name="total_coin">Total Coin:  </string>
    <string name="m5000">50000  </string>
    <string name="m1000">1000 Coin = 10 Rs  </string>
    <string name="min">Minimum 60 Rs , Maximum 100 Rs </string>
    <string name="hint_amount">Enter Amount </string>
    <string name="hint_account">Enter Account Number  </string>
    <string name="trans">Transfer Account  </string>


</resources>