<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"
         />

    <item
        android:id="@+id/spinFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/spin"
        android:icon="@drawable/spin"
         />

    <item
        android:id="@+id/historyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history"
        android:icon="@drawable/history"

        />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/user"
         />
</menu>