<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/spin__1_"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/_10sdp"
     tools:context=".fragments.WithdrawalBottomSheet">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal"
        android:textSize="@dimen/_19sdp"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_coin"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/roboto_medium"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m5000"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/roboto_medium"
         />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m1000"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/roboto_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textColor="#1a1b51"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/roboto_medium"
        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/_12sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittextbackground"
        android:hint="@string/hint_amount"
        android:paddingStart="@dimen/_10sdp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:hint="@string/hint_account"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/edittextbackground"
        android:layout_marginHorizontal="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_12sdp"
         />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/signup_btn"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/trans"
        android:textSize="@dimen/_10ssp"
        android:paddingHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/roboto_bold"

        />


</LinearLayout>