<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/splash_1"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/splashimg"
        android:contentDescription="@string/welcome"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"

        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            android:textColor="@color/welcomecolor"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/nice"
            android:textSize="@dimen/_14ssp"
             android:textColor="@color/welcomecolor"
            android:textAlignment="center"
            />



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/name"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/welcomecolor"
        android:textAlignment="center"
        />

</LinearLayout>