<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/question"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/scince1"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                     android:contentDescription="LAB"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                     android:fontFamily="@font/roboto_bold"/>

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/edittextbackground"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    />
                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/edittextbackground"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    />
                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/signup_btn"
                    android:textColor="@color/black"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/_16ssp"
                    android:paddingHorizontal="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:fontFamily="@font/roboto_bold"

                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_bold"
                        />

                    <TextView
                        android:id="@+id/signup_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:textColor="@color/welcomecolor"
                         android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/roboto_bold"
                        />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


