<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:background="@drawable/home_1"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/avtar" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Your Name"
                    android:textSize="@dimen/_16sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edittextbackground"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/person_info"
                        android:textSize="@dimen/_18sdp" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@color/white"
                        android:scaleType="centerCrop"
                        android:src="@drawable/downarrow" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edittextbackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Name"
                        android:textSize="@dimen/_18sdp" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/username"
                        android:textSize="@dimen/_18sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edittextbackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/email"
                        android:textSize="@dimen/_18sdp" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="smadal770@gmail.com"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edittextbackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/age"
                        android:textSize="@dimen/_18sdp" />

                    <TextView
                        android:id="@+id/userAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="25"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edittextbackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/country"
                        android:textSize="@dimen/_18sdp" />

                    <TextView
                        android:id="@+id/userCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Pakistan"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </LinearLayout>

             <Button
                android:id="@+id/btnSignout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/signup_btn"
                android:textColor="@color/black"
                android:text="@string/sign_out"
                android:textSize="@dimen/_14ssp"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/roboto_bold"

                />
        </LinearLayout>
    </ScrollView>